Fix hroziontal scrollbar appearing at times

--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,4 @@
-:root {
-  font-family: Nunito, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  background-color: #ffffff;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 body {
   margin: 0;
-  display: flex;
-  min-width: 320px;
-  min-height: 100vh;
+  overflow-x: hidden;
 }
